--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,3 +2,13 @@
     -webkit-transition: none !important;
     transition: none !important;
 }
+
+.start-button{
+  text-align: center;
+  margin: 10px;
+}
+
+.jumbotron{
+  padding-top: 40px;
+  padding-bottom: 40px;
+}
